--- a/models/Pytorch_Training_Letters.ipynb
+++ b/models/Pytorch_Training_Letters.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Introduction\n",
     "This file outlines the steps used in training a Pytorch model on EMNIST letter dataset. Test results are stored in \n",
-    "Pytoch_Classification.ipynb"
+    "Pytoch_Testing.ipynb"
    ]
   },
   {
